--- a/NCNP/Views/Pacientes/Create.cshtml
+++ b/NCNP/Views/Pacientes/Create.cshtml
@@ -4,8 +4,17 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
 
+<h2>Crear</h2>
+
+@if (ViewBag.Message != null)
+{
+    <script type="text/javascript">
+            window.onload = function () {
+                alert("@ViewBag.Message");
+            };
+    </script>
+}
 
 @using (Html.BeginForm()) 
 {
